compiler/testData/diagnostics/tests/tailRecursions/functionWithNoTails.kt
<!NO_TAIL_CALLS_FOUND!>tailRecursive fun noTails()<!> {
    // nothing here
}